UI (app): fix spacing between filters in replays tab

--- a/core/src/css/component/replays/replays-filter.component.scss
+++ b/core/src/css/component/replays/replays-filter.component.scss
@@ -3,6 +3,7 @@
 
 .replays-filter {
 	min-width: 150px;
+	margin-right: 15px;
 }
 
 ::ng-deep ng-select {
